fix index css alignment

--- a/menuQuiz/restoQuiz/static/restoQuiz/style.css
+++ b/menuQuiz/restoQuiz/static/restoQuiz/style.css
@@ -30,6 +30,7 @@ body {
   border: 3px solid #f1f1f1;
   width: 80%;
   padding: 20px;
+  margin: 0 auto;
 
 }
 
